- Fixed the scrollbar dimension calculation. - Added a callback which triggers when a range selection is completed.   - Demo page output log when a range selection is done.

--- a/scrollable-calendar.css
+++ b/scrollable-calendar.css
@@ -7,6 +7,7 @@
 }
 .cal-body {
     overflow-y: auto;
+    float:left;
 }
 .col-column {
     float:left;
